cleanups to the toolbox - remove &nbsp; - use style sheets to prevent wrapping within links - make more consistant with the cleanups made to the .linkdetails links for #135

--- a/style.css
+++ b/style.css
@@ -621,13 +621,14 @@ h3 {
 
 
 #toolbox {
-  padding: 2px;
-  font-size:90%;
+  font-size: 12px;
+  text-align: left;    /* centre didn't look as nice here as it did above in .linkdetails */
 }
 
 #toolbox > a {
-  padding: 2px;
-  padding-right:6px;
+  margin-left: 5px;
+  margin-right: 5px;
+  white-space: nowrap;
 }
 
 /* a common portal display takes this much space (prevents moving
